# scDEF

./: .bumpversion.cfg  .gitignore  404.html  README.md  index.html  mkdocs.yaml  objects.inv  pbmcs.py  pyproject.toml  scdef.py
.github/workflows/: docs.yaml  main.yaml  test.yaml
api/: index.html
benchmark/: other_methods.py
benchmark/benchmark_multibatch/config/: config.yaml
benchmark/benchmark_multibatch/workflow/: Snakefile
docs/: api.md  index.md  installation.md
docs/examples/: basicusage.md  scdef-pbmcs-2batches.ipynb  scdef-pbmcs3k.ipynb  scdef_ppc.ipynb
examples/basicusage/: basicusage.md  index.html
examples/scdef-pbmcs-2batches/: index.html
examples/scdef_ppc/: index.html
notebooks/: scdef-pbmcs3k.ipynb
reproducibility/: README.md  scdef_benchmark.yml  slurm.yaml
reproducibility/config/: benchmark_multibatch.yaml  chemo.yaml  cnvs.yaml  hyperparams_config.yaml  methods.yaml  pbmcs2b.yaml  pbmcs3k.yaml  pbmcsifn.yaml  planaria.yaml  realdata_config.yaml  structure_config.yaml  visium.yaml  walltime_config.yaml
reproducibility/envs/: Harmony.yml  NMF.yml  PCA.yml  Scanorama.yml  fscLVM.yml  infercnv.yml  invercnv.yml  nSBM.yml  scHPF.yml  scVI.yml  scdef.yml  squidpy.yml
reproducibility/make_figures/: pbmcs3k.ipynb  realdata_benchmarking.ipynb  simulation_benchmarking.ipynb
reproducibility/profile/: config.yaml
reproducibility/profile_local/: config.yaml
reproducibility/scripts/: gather_scores.py  run_harmony.py  run_method.py  run_muvi.py  run_nmf.py  run_nsbm.py  run_scanorama.py  run_scdef.py  run_scdef_real.py  run_scdef_un.py  run_scdef_varfactors.py  run_schpf.py  run_scvi.py  run_unintegrated.py
reproducibility/scripts/benchmark/: evaluate.py  other_methods.py
reproducibility/workflow/: run_methods.smk
reproducibility/workflow/envs/: Harmony.yml  NMF.yml  PCA.yml  Scanorama.yml  fscLVM.yml  fscLVM_nogpu.yml  infercnv.yml  nSBM.yml  scHPF.yml  scVI.yml  scVI_nogpu.yml  scdef.yml  seuratdata.yml  (+4 more)
scdef/: __init__.py  bscdef.py  iscdef.py  main.py  other_methods.py  scdef.py  util.py
scdef/benchmark/: __init__.py  constants.py  evaluate.py  other_methods.py
scdef/models/: __init__.py  _iscdef.py  _scdef.py  informed.py  integrated.py  joint.py  single.py  spatial.py
scdef/utils/: color_utils.py  eval_utils.py  hierarchy_utils.py  jax_utils.py  score_utils.py
search/: search_index.json
simulations/config/: benchmark_config.yaml  config.yaml  hyperparams_config.yaml  walltime_config.yaml
simulations/workflow/: Snakefile  benchmark.smk  hclust.smk  hyperparams.smk  structure.smk
src/scdef/: __init__.py  bscdef.py  main.py
tests/: test_integration.py  test_sscdef.py
(+173 files in other folders)
