[tool.poetry]
name = "scdef"
version = "0.0.1"
description = "Extract hierarchical signatures of cell state from single-cell data."
license = "MIT"
authors = ["pedrofale <pedro.miguel.ferreira.pf@gmail.com>"]
readme = "README.md"
repository = "https://github.com/cbg-ethz/scdef"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
pandas = "^1.3.2"
numpy = "^1.21.2"
jax = "^0.3.20"
jaxlib = "^0.3.20"
scanpy = "^1.8.2"
anndata = "^0.7.8"
click = "^8.0.1"
tqdm = "^4.57.0"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
black = "^21.7b0"
pytest = "^6.2.4"

[tool.poetry.scripts]
scdef = "scdef:main"
