[tool.poetry]
name = "scdef"
version = "0.0.12"
description = "Extract hierarchical signatures of cell state from single-cell data."
license = "MIT"
authors = ["pedrofale <pedro.miguel.ferreira.pf@gmail.com>"]
readme = "README.md"
repository = "https://github.com/cbg-ethz/scdef"

[tool.poetry.dependencies]
python = ">=3.8"
pandas = "^1.5.1"
numpy = "^1.23.4"
jax = "^0.3.25"
jaxlib = "^0.3.25"
scanpy = "^1.9.3"
anndata = "^0.9.1"
click = "^8.0.1"
tqdm = "^4.64.0"
gseapy = "^1.0.4"
graphviz = "^0.14.2"
igraph = "^0.10.4"

[tool.poetry.group.extras]
optional = true

[tool.poetry.group.extras.dependencies]
leidenalg = '*'
harmonypy = '*'
scanorama = '*'
scikit-learn = '*'

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
black = "^23.3.0"
pytest = "^6.2.4"

[tool.poetry.scripts]
scdef = "scdef:main"
